--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,9 +1,14 @@
 
-<van-button size="large" bind:getuserinfo>大号按钮</van-button>
+<view class='ava'><l-avatar open-data="{{['userAvatarUrl','userNickName']}}" /></view>
 
 
 <van-cell
-  title="单元格"
-  icon="location-o"
+  title="我的收藏"
+  icon="star-o"
+  is-link
+/>
+<van-cell
+  title="关于"
+  icon="info-o"
   is-link
 />
