--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,3 +1,11 @@
 .page{
   background: white
 }
+.ava{
+  background: white;
+  padding-top: 20rpx;
+  padding-left: 20rpx;
+  padding-bottom: 20rpx;
+  margin-bottom: 10rpx
+  
+}
