--- a/pages/new-index/new-index.wxml
+++ b/pages/new-index/new-index.wxml
@@ -1,13 +1,12 @@
 <van-row>
   <van-col span="5">
-    <view class='local'>
-      <van-icon name="location-o" />
-      <text>深圳市</text>
+    <view class='local' bindtap='onlocalTap'>
+      <l-tag shape="circle" size="large" icon-size="30" icon-name="address" plain="{{true}}">{{initCity}}</l-tag>
     </view>
   </van-col>
   <van-col span="19">
     <view class='search'>
-      <van-search value="{{ value }}" placeholder="输入材料名称进行搜索" show-action="{{false}}" bind:search="onSearch" bind:cancel="onCancel" />
+      <van-search value="{{ invalue }}" placeholder="输入材料名称进行搜索" show-action="{{false}}" bind:search="onSearch" bind:cancel="onCancel" />
     </view>
   </van-col>
 </van-row>
@@ -23,7 +22,7 @@
 </swiper>
 
 
-<view class="table">
+<!-- <view class="table">
   <view class="tr bg-w">
     <view class="th">名称</view>
     <view class="th">规格型号</view>
@@ -55,4 +54,74 @@
       </view>
     </view>
   </block>
+</view> -->
+
+<van-popup
+  show="{{ show }}"
+  position="bottom"
+  overlay="{{ true }}"
+  bind:close="onClose"
+>
+  <view class="box">
+    <picker-view indicator-style="height: 50px;" style="width: 100%; height: 150px;" value="{{value}}" bindchange="bindChange">
+        <picker-view-column>
+            <view wx:for="{{provinces}}">{{item}}</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{citys}}">{{item}}</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{areas}}">{{item}}</view>
+        </picker-view-column>
+    </picker-view>
 </view>
+</van-popup>
+
+<view class='list'>
+<view class='titile' bindtap='onTabTime'><van-tag mark   type="success"  size="large" color="#3963BC">{{initYear}}{{initMonth}}信息价</van-tag>  </view>
+<view class='list-content'><view class="table">
+  <view class="tr bg-w">
+    <view class="th">名称</view>
+    <view class="th">规格型号</view>
+    <view class="th ">价格</view>
+  </view>
+  <scroll-view scroll-y="{{true}}" style="height: 1050rpx" >
+<block wx:for="{{listData}}" wx:key="{{code}}">
+    <view class="tr" wx:if="{{index % 2 == 0}}">
+      <view class="td">{{item.code}}</view>
+      <view class="td">{{item.text}}</view>
+      <view class="td price">
+        <view>{{item.date}} {{item.unit}}
+          <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
+        </view>
+        <view>{{item.date}} {{item.unit}}
+          <van-tag color='#3683d6' plain="{{true}}">含税</van-tag>
+        </view>
+      </view>
+    </view>
+    <view class="tr" wx:else style='background:		snow'>
+      <view class="td">{{item.code}}</view>
+      <view class="td">{{item.text}}</view>
+      <view class="td price">
+        <view>{{item.date}} {{item.unit}}
+          <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
+        </view>
+        <view>{{item.date}} {{item.unit}}
+          <van-tag color="#3683d6" plain="{{true}}">含税</van-tag>
+        </view>
+      </view>
+    </view>
+  </block>
+
+</scroll-view>
+</view></view>
+</view>
+
+<van-popup
+  show="{{ timeShow }}"
+  position="bottom"
+  overlay="{{ true }}"
+  bind:close="onTimeClose"
+>
+<van-picker columns="{{ columns }}" bind:change="onTimeChange" />
+</van-popup>
