--- a/pages/new-index/new-index.wxss
+++ b/pages/new-index/new-index.wxss
@@ -98,7 +98,7 @@ page {
   display: flex;
   width: 100%;
   justify-content: center;
-  height: 3rem;
+  height:100rpx;
   align-items: center;
 }
 .td {
