--- a/pages/new-index/new-index.wxss
+++ b/pages/new-index/new-index.wxss
@@ -130,13 +130,18 @@ page {
   width: 40%;
   justify-content: center;
   /* background: #adb1b6; */
-  color: #3683d6;
+  color: #282a2c;
   display: flex;
   height: 2rem;
   align-items: center; 
 }
 .price{
-  text-align: right
+  text-align: right;
+  padding-right: 20rpx
+}
+.name{
+ 
+  
 }
 
 
