--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,1 +1,44 @@
-/* pages/search/search.wxss */
+.tr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 100rpx;
+  align-items: center;
+}
+
+.td {
+  width: 40%;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /*这个数字是设置要显示省略号的行数*/
+  -webkit-box-orient: vertical;
+}
+
+.bg-w {
+  background: snow;
+  font-size: 14px;
+  font-weight: 500;
+  height: 2rem;
+}
+
+.th {
+  width: 40%;
+  justify-content: center;
+  /* background: #adb1b6; */
+  color: #282a2c;
+  display: flex;
+  height: 2rem;
+  align-items: center;
+}
+
+.price {
+  text-align: right;
+  padding-right: 20rpx;
+}
+
+.keyword{
+  margin-left: 20rpx
+}
