--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -13,7 +13,7 @@
         <block wx:for="{{listData}}" wx:key="{{code}}">
 
           <view class="tr">
-            <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6'>{{item.name}}</view>
+            <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6' data-id="{{item._id}}">{{item.name}}</view>
             <view class="td">{{item.xinghao}}</view>
             <view class="td price">
               <view wx-if="{{item.pricewithoutaxe != 0}}">￥{{item.pricewithoutaxe}} 元/{{item.unit}}
@@ -25,8 +25,11 @@
             </view>
           </view>
         </block>
-        <l-loadmore show="{{listNum > 15 && !end}}" type="loading" loading-text="努力加载中~" line="{{true}}"></l-loadmore>
-        <l-loadmore show="{{end}}" type="end" loading-text="我是有底线的~" line="{{true}}" ></l-loadmore>
+        <l-loadmore show="{{true}}" type="loading" loading-text="努力加载中~" line="{{true}}" wx:if="{{listNum > 15 && !isend}}"></l-loadmore>
+        <l-loadmore show="{{true}}" type="end" end-text="我是有底线的~" line="{{true}}" wx:if="{{isend}}"></l-loadmore>
+
+        <l-loadmore show="{{true}}" type="end" end-text="没有搜索结果~~" line="{{true}}" wx:if="{{!isend && listNum ==0 }}"></l-loadmore>
+      
       </scroll-view>
     </view>
   </view>
