--- a/pages/new-index/new-index.wxml
+++ b/pages/new-index/new-index.wxml
@@ -24,67 +24,68 @@
 
 
 
-<van-popup
-  show="{{ show }}"
-  position="bottom"
-  overlay="{{ true }}"
-  bind:close="onClose"
->
+<van-popup show="{{ show }}" position="bottom" overlay="{{ true }}" bind:close="onClose">
   <view class="box">
     <picker-view indicator-style="height: 50px;" style="width: 100%; height: 150px;" value="{{value}}" bindchange="bindChange">
-        <picker-view-column>
-            <view wx:for="{{provinces}}">{{item}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{citys}}">{{item}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{areas}}">{{item}}</view>
-        </picker-view-column>
+      <picker-view-column>
+        <view wx:for="{{provinces}}">{{item}}</view>
+      </picker-view-column>
+      <picker-view-column>
+        <view wx:for="{{citys}}">{{item}}</view>
+      </picker-view-column>
+      <picker-view-column>
+        <view wx:for="{{areas}}">{{item}}</view>
+      </picker-view-column>
     </picker-view>
-</view>
+  </view>
 </van-popup>
 
 <view class='list'>
-<view class='titile' ><van-tag mark   type="success"  size="large" color="#3963BC" bindtap='onTabTime'>{{initYear}}{{initMonth}}份信息价</van-tag>  </view>
-<view class='list-content'><view class="table">
-  <view class="tr bg-w">
-    <view class="th">名称</view>
-    <view class="th">规格型号</view>
-    <view class="th ">价格</view>
+  <view class='titile'>
+    <van-tag mark type="success" size="large" color="#3963BC" bindtap='onTabTime'>{{initYear}}{{initMonth}}份信息价</van-tag>
   </view>
-  <scroll-view scroll-y="{{true}}" style="height: 588rpx" bindscrolltolower="onLower" enable-back-to-top="{{true}}">
-<block wx:for="{{listData}}" wx:key="{{code}}">
-
-    <view class="tr" >
-      <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6' data-id="{{item._id}}">{{item.name}}</view>
-      <view class="td" >{{item.xinghao}}</view>
-      <view class="td price">
-        <view wx-if="{{item.pricewithoutaxe != 0}}">￥{{item.pricewithoutaxe}} 元/{{item.unit}}
-          <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
-        </view>
-        <view wx-if="{{item.pricewithtaxe != 0}}">￥{{item.pricewithtaxe}} 元/{{item.unit}}
-          <van-tag color='grey' plain="{{true}}">含税</van-tag>
-        </view>
+  <view class='list-content'>
+    <view class="table">
+      <view class="tr bg-w">
+        <view class="th">名称</view>
+        <view class="th">规格型号</view>
+        <view class="th ">价格</view>
       </view>
+      <scroll-view scroll-y="{{true}}" style="height: 588rpx" bindscrolltolower="onLower" enable-back-to-top="{{true}}">
+        <block wx:for="{{listData}}" wx:key="{{code}}">
+
+          <view class="tr">
+            <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6' data-id="{{item._id}}">{{item.name}}</view>
+            <view class="td">{{item.xinghao}}</view>
+            <view class="td price">
+              <view wx-if="{{item.pricewithoutaxe != 0}}">￥{{item.pricewithoutaxe}} 元/{{item.unit}}
+                <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
+              </view>
+              <view wx-if="{{item.pricewithtaxe != 0}}">￥{{item.pricewithtaxe}} 元/{{item.unit}}
+                <van-tag color='grey' plain="{{true}}">含税</van-tag>
+              </view>
+            </view>
+          </view>
+        </block>
+
+        <l-loadmore show="{{true}}" type="loading" loading-text="努力加载中~" wx:if="{{listNum > 15}}"></l-loadmore>
+        <l-loadmore show="{{true}}" type="end" end-text="我是有底线的~" line="{{true}}" wx:if="{{isend}}"></l-loadmore>
+
+        <!-- <l-loadmore show="{{true}}" type="end" end-text="{{initCity}}{{initYear}}{{initMonth}}份信息价暂未提供,快去 我的--关于 联系开发者上线吧!"  wx:if="{{!isend && listNum ==0 }}"></l-loadmore> -->
+
+        <view class='tips' wx:if="{{!isend && listNum ==0 }}">
+          <icon type='warn' size='70' style='margin-top:20rpx'></icon>
+          <text style='width:70%;margin-top:20rpx; text-align:center;color:#b9bdc1'>{{initCity}}{{initYear}}{{initMonth}}份信息价暂未能提供,快去联系开发者添加上去吧!</text>
+          <van-button type="primary" size='large' style='width:90%;margin-top:30rpx' >马上就去</van-button>
+        </view>
+        
+      </scroll-view>
     </view>
-</block>
-
-<l-loadmore show="{{true}}" type="loading" loading-text="努力加载中~" wx:if="{{listNum > 15}}"></l-loadmore>
-<l-loadmore show="{{true}}" type="end" end-text="我是有底线的~" line="{{true}}" wx:if="{{isend}}"></l-loadmore>
-<l-loadmore show="{{true}}" type="end" end-text="{{initCity}}{{initYear}}{{initMonth}}份信息价暂未提供,快去 我的--关于 联系开发者上线吧!"  wx:if="{{!isend && listNum ==0 }}"></l-loadmore>
-
-</scroll-view>
-</view></view>
+  </view>
 </view>
 
-<van-popup
-  show="{{ timeShow }}"
-  position="bottom"
-  overlay="{{ true }}"
-  bind:close="onTimeClose"
->
-<van-picker columns="{{ columns }}" bind:change="onTimeChange" />
+<van-popup show="{{ timeShow }}" position="bottom" overlay="{{ true }}" bind:close="onTimeClose">
+  <van-picker columns="{{ columns }}" bind:change="onTimeChange" />
 </van-popup>
 
 <!-- toast 必须组件 -->
