--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   background: white;
+  border: 1rpx solid rgba(164, 173, 173, 0.349);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin: 10rpx 10rpx
 
-  
 }
