--- a/pages/test/test.wxss
+++ b/pages/test/test.wxss
@@ -1,69 +1,40 @@
-.left {
-  background-color: white;
-  height:140rpx;
-  width: 750rpx;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 30rpx;
-  box-sizing: border-box;
+.page{
+  background: #ffffff
 }
 
-.left-con {
+
+.detail-card {
   display: flex;
   flex-direction: column;
-}
+  background: white;
+  border: 1rpx solid rgba(164, 173, 173, 0.548);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin: 20rpx 20rpx
 
-.left-title {
-  font-size: 28rpx;
-  font-family: PingFangSC-Regular;
-  font-weight: 400;
-  color: rgba(69, 82, 107, 1);
-  line-height: 20px;
-  letter-spacing: 1px;
 }
-
-.left-time {
-  font-size: 24rpx;
-  font-family: PingFangSC-Regular;
-  font-weight: 400;
-  color: rgba(196, 201, 210, 1);
-  line-height: 17px;
-}
-
-.left-price {
-  font-size: 32rpx;
-  font-family: PingFangSC-Medium;
-  font-weight: 500;
-  color: rgba(69, 82, 107, 1);
-  line-height: 22px;
-}
-
-.right {
-  height: 140rpx;
+.head{
   display: flex;
-  direction: row;
-  text-align: center;
-  vertical-align: middle;
-  justify-content: space-around;
-  line-height: 140rpx;
-  background: rgba(54, 131, 214, 1);
-  color: #fff;
-  font-size: 28rpx;
-}
+  flex-direction: row;
+  justify-content:space-around;
+  align-items:center;
 
-.like{
-  background: #9AB2FF;
-  width: 33%
-}
+  height: 80rpx;
+  width: 100%;
+  background: rgba(181, 187, 187, 0.164);
+  
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 
-.share{
-  background: #6E90FD;
-  width: 33%  
 }
+.titile{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items:center;
 
-.del{
-  background: #F4516C;
-  width: 34%  
+  height:40rpx;
+  font-size: 24rpx;
+  margin-left: 20rpx
+  
 }
