--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,9 +1,46 @@
 <view class="detail-card">
-<view class='titile'>名称 圆钢</view>
-<view class='spec'>规格型号 HPB300 Ф10外</view>
-<view class='price-with-taxe'>含税价格 4858元/t</view>
-<view class='price-without-taxe'>除税价格 </view>
-<view class='disc'>地区归属 广东/深圳市</view>
-<view class='Time'>时间归属 2018年02月份</view>
-<view class='note'>备注 还好啦</view>
+  <view class='head'>
+    <l-tag shape="circle" size="large" bg-color="#EE5C42">{{name}}</l-tag>
+    <text style='color:#EE5C42; font-size: 30rpx; font-weight:bold' wx:if="{{pricewithtaxe !=0}}">¥{{pricewithtaxe}}元/{{unit}}</text>
+    <text style='color:#EE5C42; font-size: 30rpx; font-weight:bold' wx:else>¥{{pricewithoutaxe}}元/{{unit}}</text>
+    <view class='icon'>
+      <van-icon name="star-o" size='50rpx' style='margin-right:40rpx' wx:if="{{!isStared}}" bindtap='onTabStar' />
+      <van-icon name="star" size='50rpx' style='margin-right:40rpx' wx:else bindtap='onTabStar'/>
+      <van-icon name="share" size='50rpx' bindtap='onTabShare' />
+    </view>
+  </view>
+
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>材料名称</text>
+    <text style='margin-left:20rpx'>{{name}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>规格型号</text>
+    <text style='margin-left:20rpx'>{{xinghao}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>含税价格</text>
+    <text style='margin-left:20rpx' wx:if="{{pricewithtaxe !=0}}">{{pricewithtaxe}}元/{{unit}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>除税价格</text>
+    <text style='margin-left:20rpx' wx:if="{{pricewithoutaxe !=0}}">{{pricewithoutaxe}}元/{{unit}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>价格税率</text>
+    <text style='margin-left:20rpx'>{{taxe}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>地区归属</text>
+    <text style='margin-left:20rpx'>{{province}}/{{area}}</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548)'>时间归属</text>
+    <text style='margin-left:20rpx'>{{year}}年{{mon}}份</text>
+  </view>
+  <view class='titile'>
+    <text style='color:rgba(164, 173, 173, 0.548);white-space:nowrap;'>其它备注</text>
+    <text style='margin-left:20rpx'>{{note}}</text>
+  </view>
+
 </view>
