--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -10,13 +10,14 @@
   border: 1rpx solid rgba(164, 173, 173, 0.548);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  margin: 20rpx 20rpx
+  margin: 20rpx 20rpx;
+  box-shadow: 2px 2px 30px #c7ccd7;
 
 }
 .head{
   display: flex;
   flex-direction: row;
-  justify-content:space-around;
+  justify-content:space-between;
   align-items:center;
 
   height: 80rpx;
