--- a/pages/user/about/about.wxml
+++ b/pages/user/about/about.wxml
@@ -1,9 +1,5 @@
-<l-card  type="primary" 
-           l-img-class="right-card" 
-           position="left" 
-           image="/images/3.png"
-    title="嗨,你好！" >
-    <view class="content">
-      很简单，豆瓣现在这样就给大家指了一条明路:以后凡是这种国产的风口浪尖的的片子...
-    </view>
-  </l-card>
+<view class='container'>
+<l-card type="primary" l-img-class="right-card" position="left" image="/images/3.png" title="嗨,你好！">
+  <view class="content">
+    这是一款可以随时随地\快速查找\本地收藏\转发分享\当地建材信息价的微信小程序,数据正在添加中,如果您所需的数据暂未提供或有任何意见和建议 ,欢迎您扫描左边二维码进入查材价官方微信群反馈,我们一定会尽快处理! </view>
+</l-card></view>
