--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,7 @@
 
 page{
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     color: #333;
     background-color: #f5f5f5;
     font-size: 14px;
