--- a/pages/banner/banner1.wxml
+++ b/pages/banner/banner1.wxml
@@ -2,9 +2,9 @@
   <view class='title'>你需要了解的信息价小知识</view>
   <view class='time'>查材价 2019-03-22</view>
   <view class='question'>什么是信息价?</view>
-  <view class='content'>信息价是指由政府定期发布，反映建筑人工、材料设备、机械等在特定时间段内的综合价格，作为区域内工程计价的参考一种价格。在建筑工程中预结算中有着广泛的应用.</view>
+  <view class='content'>信息价是指由政府定期发布，反映建筑人工、材料设备、机械等在特定时间段内的综合价格，作为区域内工程计价的参考一种价格。在建筑工程中预结算中有着广泛的应用。</view>
   <view class='question'>信息价一般什么内容?</view>
-  <view class='content'>大家可能会用到的有,家装的建材:防水涂料 水电安装的电线 给水排水管 瓷砖 木地板 踢脚线等等</view>
+  <view class='content'>大家可能会用到的有:常见的家装的建材,比如防水涂料、水电安装的电线、给水排水管、瓷砖、木地板、踢脚线等等</view>
   <view class='question'>信息价有何用?</view>
-  <view class='content'>信息价一般可用于工程预结算,编制招标控制价等等,当然,也可以作为你去建材市场采购建材价格的参考</view>
+  <view class='content'>信息价一般可用于工程预结算,编制招标控制价等等。当然,也可以作为你去建材市场采购建材价格的参考。</view>
 </view>
