--- a/pages/new-index/new-index.wxml
+++ b/pages/new-index/new-index.wxml
@@ -13,10 +13,10 @@
 
 
 
-<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" height="10" indicator-dots="{{true}}" indicator-color="#3683d6" indicator-active-color="snow" autoplay='{{true}}' current="{{current}}" bindchange='swiperChange'>
+<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" height="10" indicator-dots="{{true}}" indicator-color="gray" indicator-active-color="snow" autoplay='{{true}}' current="{{current}}" bindchange='swiperChange'>
   <block wx:for="{{imgUrls}}">
     <swiper-item bindtap="swipClick">
-      <image src="{{item}}" class="slide-image" style="width: 100%; height: 150px; background-color: #eeeeee;" mode='scaleToFill'  />
+      <image src="{{item}}" class="slide-image" style="width: 100%; height:300rpx; background-color: #eeeeee;" mode='scaleToFill'  />
     </swiper-item>
   </block>
 </swiper>
@@ -51,12 +51,12 @@
         <view class="th">规格型号</view>
         <view class="th ">价格</view>
       </view>
-      <scroll-view scroll-y="{{true}}" style="height: 645rpx" bindscrolltolower="onLower" enable-back-to-top="{{true}}">
+      <scroll-view scroll-y="{{true}}" style="height: 600rpx" bindscrolltolower="onLower" enable-back-to-top="{{true}}">
         <block wx:for="{{listData}}" wx:key="{{code}}">
 
           <view class="tr">
             <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6' data-id="{{item._id}}">{{item.name}}</view>
-            <view class="td">{{item.xinghao}}</view>
+            <view class="td xinghao">{{item.xinghao}}</view>
             <view class="td price">
               <view wx-if="{{item.pricewithoutaxe != 0}}">￥{{item.pricewithoutaxe}} 元/{{item.unit}}
                 <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
