--- a/pages/banner/banner2.wxml
+++ b/pages/banner/banner2.wxml
@@ -1,13 +1,2 @@
-<view class='container'>
-  <view class='title'>如何在查材价中完成老板交付的任务</view>
-  <view class='time'>查材价 2019-03-22</view>
 
-  <view class='question'>步骤一:选择地区和时间,搜索</view>
-  <image src='/images/ss.png' mode='aspectFill' style="width: 100%; height:550rpx;"></image>
-  <view class='question'  >步骤二:点击材料名称进入详情页</view>
-  <image src='/images/xz.png' mode='aspectFill' style="width: 100%; height:550rpx;"></image>
-  <view class='question' >步骤三:点击收藏或右上角转发</view>
-  <image src='/images/sz.png'  mode='aspectFill' style="width: 100%; height:550rpx;"></image>
-
-
-</view>
+<view class="con"><van-button size="large" open-type="contact"  type="primary">联系客服</van-button></view>
