--- a/pages/new-index/new-index.wxss
+++ b/pages/new-index/new-index.wxss
@@ -128,8 +128,11 @@ page {
 }
 
 .price {
+  display: flex;
+  flex-direction: column;
   text-align: right;
   padding-right: 20rpx;
+  justify-content: flex-end;
 }
 
 .name {
@@ -165,4 +168,11 @@ picker-view view {
 
 .xinghao{
 padding: 0 5rpx
+}
+
+.pri{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row
 }
